[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sunkit_spex"
description = "A package for solar X-ray spectroscopy."
requires-python = ">=3.12"
readme = { file = "README.rst", content-type = "text/x-rst" }
license-files = ["licenses/LICENSE.rst"]
authors = [
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
    "corner>=2.2",
    "emcee>=3.1",
    "matplotlib>=3.9",
    "nestle>=0.2",
    "numdifftools>=0.9.42",
    "numpy>=1.26",  # Note: keeping support for numpy 1.x for now
    "parfive>=2.1",
    "scipy>=1.12",
    "sunpy>=7.0",
    "xarray>=2023.12",
    "gwcs<1.0.0", #until https://github.com/sunpy/ndcube/issues/913 is resolved
    "ndcube>=2.3",
]

dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sunpy-sphinx-theme",
  "packaging",
  "sphinx-changelog",
  "sphinx-gallery",
  "pypandoc"
]
dev = [
    "sunkit-spex[docs,tests]",
    "tox"
]

[project.urls]
Homepage = "https://sunkit-spex.readthedocs.io"
Download = "https://pypi.org/project/sunkit-spex"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["sunkit_spex*"]
exclude = ["sunkit_spex._dev*"]

[tool.setuptools_scm]
version_file = "sunkit_spex/_version.py"

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/sunpy/sunkit-spex/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/sunkit-spex/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/sunkit-spex/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "sunkit_spex"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/sunpy/sunkit-spex/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
