[metadata]
name = sunxspex
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunxspex.readthedocs.io
description = A package for solar X-ray spectroscopy.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    sunpy
    scipy
    xarray
    quadpy

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

    sunpy-sphinx-theme


[options.package_data]
sunxspex = data/*

[tool:pytest]
testpaths = "sunxspex" "docs"
doctest_plus = enabled
text_file_format = rst
#addopts = --doctest-rst

[coverage:run]
omit =
  sunxspex/_sunpy_init*
  sunxspex/conftest.py
  sunxspex/*setup_package*
  sunxspex/tests/*
  sunxspex/*/tests/*
  sunxspex/extern/*
  sunxspex/version*
  */sunxspex/_sunpy_init*
  */sunxspex/conftest.py
  */sunxspex/*setup_package*
  */sunxspex/tests/*
  */sunxspex/*/tests/*
  */sunxspex/extern/*
  */sunxspex/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
