[metadata]
name = sunkit-spex
provides = sunkit_spex
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunkit-spex.readthedocs.io
description = A package for solar X-ray spectroscopy.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    sunpy
    parfive
    scipy
    xarray
    quadpy
    orthopy
    ndim
    matplotlib
    emcee
    corner
    nestle
    numdifftools


[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
    pytest-xdist
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme
    # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
    importlib-resources<6
    sphinx-changelog>=1.1.1

[options.package_data]
sunkit_spex = data/*

[tool:pytest]
testpaths = "sunkit_spex" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" ".jupyter" ".history" "Fitter[\/]extern"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --dist no --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    mpl_image_compare: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
    flaky
    array_compare
remote_data_strict = False
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    # https://github.com/pytest-dev/pytest-cov/issues/557
    # It was fixed and released but it does not seem to be fixed
    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
    # Raised by sunpy.coordinates.transformations and will be removed in sunpy 6.1
    ignore:.*module is deprecated, as it was designed for internal use
    # https://github.com/pandas-dev/pandas/issues/54466
    # Should stop when pandas 3.0.0 is released
    ignore:(?s).*Pyarrow will become a required dependency of pandas:DeprecationWarning
    # TODO review and fix just getting test running
    ignore:numpy.ndarray size changed.*:RuntimeWarning
    ignore:Some input energy values outside valid range.*:UserWarning
    ignore:invalid value encountered in.*:RuntimeWarning
    ignore:divide by zero encountered in.*:RuntimeWarning
    ignore:The truth value of an empty array is ambiguous..*:DeprecationWarning
    ignore:LinAlgError when calculating the hessian. Errors may not be calculated.:UserWarning

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=sunkit_spex/extern/,.py,docs/conf.py,sunkit_spex/__init__.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf
known_first_party = sunpy
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunkit_spex/_sunpy_init*
  sunkit_spex/conftest.py
  sunkit_spex/*setup_package*
  sunkit_spex/tests/*
  sunkit_spex/*/tests/*
  sunkit_spex/extern/*
  sunkit_spex/version*
  */sunkit_spex/
  */sunkit_spex/conftest.py
  */sunkit_spex/*setup_package*
  */sunkit_spex/tests/*
  */sunkit_spex/*/tests/*
  */sunkit_spex/extern/*
  */sunkit_spex/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
